--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,25 @@ h1 {
   color: blue;
 }
 
-.img-thumbnail {
-  width: 150px;
-  height: 150px;
-  align-content:center;
+
+
+.btn {
+height:150px; 
+width: 150px;  
+
+
 }
 
+#btn1 {
+  background-image:url('../images/clear.jpg');
+}
 
+#btn2 {
+  background-image:url('../images/diamond.jpg');
+}
+#btn3 {
+  background-image:url('../images/purple.jpg');
+}
+#btn4 {
+  background-image:url('../images/star.jpg');
+}
