--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,15 @@ body {
   }
 
 h1 {
-  font-size: 30px;
+  font-size: 50px;
   color: blue;
+  align-items: center;
 }
 
-
+.jumbotron {
+  padding:15px;
+  margin-bottom:20px;
+}
 
 .btn {
 height:150px; 
